--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,7 +52,7 @@ body {
   font-family: "Prompt", sans-serif;
   color: white; */
   overflow-x: hidden;
-  min-height: 100vh !important;
+  /* min-height: 100vh !important; */
 }
 
 section {
