--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,8 @@ body {
   color: white; */
   overflow-x: hidden;
   /* min-height: 100vh !important; */
+  /* font-family: "Abril Fatface" !important; */
+  font-family: "Arvo", serif !important;
 }
 
 section {
