--- a/src/App.css
+++ b/src/App.css
@@ -191,9 +191,9 @@ section {
 } */
 .mydivouter {
   position: relative;
-  background: #f90;
-  width: 200px;
-  height: 120px;
+  /* background: #f90; */
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 .mydivoverlap {
@@ -203,9 +203,9 @@ section {
 .mybuttonoverlap {
   position: absolute;
   z-index: 2;
-  top: 44px;
+  top: 64px;
   display: none;
-  left: 59px;
+  left: 35%;
 }
 .mydivouter:hover .mybuttonoverlap {
   display: block;
